# SoccerBot

./: readme.txt
soccer_sim/: CMakeLists.txt  package.xml
soccer_sim/include/soccer_sim/: agent.h  constants.h  simulation_frame.h  turtle.h  turtle_frame.h
soccer_sim/msg/: Pose.msg
soccer_sim/src/: agent.cpp  simulation_frame.cpp  soccer_sim.cpp  turtle.cpp  turtle_frame.cpp  turtlesim.cpp
soccer_sim/srv/: Spawn.srv
soccerbot/: package.xml  setup.py
soccerbot/launch/: launch.py  single_agent_launch.py
soccerbot/soccerbot/: collision_detection.py  distance_sensor.py  formation_controller.py  soccer_player.py
soccerbot_interfaces/: CMakeLists.txt  package.xml
soccerbot_interfaces/srv/: DistanceReq.srv
